# Fourier

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp
include/FourierImages/: Application.hpp  Fourier.hpp  FourierDrawer.hpp
src/FourierImages/: Fourier.cpp  FourierDrawer.cpp
